--- a/package.json
+++ b/package.json
@@ -2,10 +2,18 @@
   "name": "backend_project",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
+    "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "tamim",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "prettier": "^3.5.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  }
 }
